--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Crokelet - La mejor nutrición para tu mascota. Alimentos premium para perros y gatos.">
     <title>Crokelet - Nutrición experta para mascotas</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -15,7 +14,7 @@
             <!-- Logo con enlace a inicio -->
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.png" alt="Crokelet Logo" class="logo-img">
+                    <img src="https://via.placeholder.com/200x80?text=Crokelet+Logo" alt="Crokelet Logo" class="logo-img">
                 </a>
             </div>
 
@@ -69,7 +68,8 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero-dog.jpg" alt="Perro feliz comiendo croquetas premium" loading="lazy">
+                <img src="https://images.unsplash.com/photo-1587764379873-97837921fd44?w=1200" 
+                     alt="Perro feliz comiendo croquetas premium" loading="lazy">
             </div>
         </section>
 
@@ -95,17 +95,20 @@
         <!-- Enlaces rápidos a productos -->
         <section class="categorias">
             <a href="productos.html#perros" class="categoria-card">
-                <img src="images/perros-categoria.jpg" alt="Alimentos para Perros" loading="lazy">
+                <img src="https://images.unsplash.com/photo-1568640347023-a616a30bc3bd?w=500" 
+                     alt="Alimentos para Perros" loading="lazy">
                 <h3>Perros</h3>
                 <p>Nutrición especializada y snacks saludables</p>
             </a>
             <a href="productos.html#gatos" class="categoria-card">
-                <img src="images/gatos-categoria.jpg" alt="Alimentos para Gatos" loading="lazy">
+                <img src="https://images.unsplash.com/photo-1519052537078-e6302a4968d4?w=500" 
+                     alt="Alimentos para Gatos" loading="lazy">
                 <h3>Gatos</h3>
                 <p>Alimentación balanceada y premios</p>
             </a>
             <a href="servicios.html" class="categoria-card">
-                <img src="images/servicios-categoria.jpg" alt="Servicios Veterinarios" loading="lazy">
+                <img src="https://images.unsplash.com/photo-1628009368231-7bb7cf5bd525?w=500" 
+                     alt="Servicios Veterinarios" loading="lazy">
                 <h3>Servicios</h3>
                 <p>Asesoría nutricional y cuidado integral</p>
             </a>
@@ -115,7 +118,39 @@
         <section class="productos-destacados">
             <h2 class="text-center mb-2">Productos Destacados</h2>
             <div class="productos-grid">
-                <!-- Los productos se mantienen igual -->
+                <!-- Producto 1 -->
+                <div class="producto-card">
+                    <img src="https://images.unsplash.com/photo-1601758228041-f3b2795255f1?w=500" 
+                         alt="Crokelet Premium" loading="lazy">
+                    <div class="producto-info">
+                        <h3>Crokelet Premium</h3>
+                        <p>Para perros adultos</p>
+                        <span class="precio">$599.99</span>
+                        <button class="btn-comprar">Agregar al carrito</button>
+                    </div>
+                </div>
+                <!-- Producto 2 -->
+                <div class="producto-card">
+                    <img src="https://images.unsplash.com/photo-1589924691995-400dc9ecc119?w=500" 
+                         alt="Crokelet Gatos" loading="lazy">
+                    <div class="producto-info">
+                        <h3>Crokelet Gatos</h3>
+                        <p>Control bolas de pelo</p>
+                        <span class="precio">$549.99</span>
+                        <button class="btn-comprar">Agregar al carrito</button>
+                    </div>
+                </div>
+                <!-- Producto 3 -->
+                <div class="producto-card">
+                    <img src="https://images.unsplash.com/photo-1582798358481-d199fb7347bb?w=500" 
+                         alt="Snacks Dentales" loading="lazy">
+                    <div class="producto-info">
+                        <h3>Snacks Dentales</h3>
+                        <p>Higiene dental</p>
+                        <span class="precio">$199.99</span>
+                        <button class="btn-comprar">Agregar al carrito</button>
+                    </div>
+                </div>
             </div>
             <div class="text-center mt-2">
                 <a href="productos.html" class="btn-primary">
@@ -125,7 +160,7 @@
         </section>
 
         <!-- Enlace a Nosotros -->
-        <section class="about-preview">
+        <section class="about-preview" style="background-image: url('https://images.unsplash.com/photo-1450778869180-41d0601e046e?w=1200')">
             <h2>Conoce Nuestra Historia</h2>
             <p>Descubre cómo comenzamos y por qué somos la mejor opción para tu mascota.</p>
             <a href="nosotros.html" class="btn-secondary">
